--- a/gentest/build.gradle
+++ b/gentest/build.gradle
@@ -31,7 +31,7 @@ task genPingPong(type: JavaExec) {
     classpath += files('../target/libs/MCAutomaton.jar')
     mainClass = 'automata.AutomataTool'
 
-    args 'src/main/resources/PingPong.aut', 'target/generated-sources/'
+    args '-i','src/main/resources/PingPong.aut', '-o', 'target/generated-sources/'
 }
 
 compileJava {
