--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build_gradle:
 deploy_gradle:
   stage: deploy
   script:
-    - "gradle publish -PmavenPassword=$password -PmavenUser=$username"
+    - "gradle publish -PmavenPassword=$pass -PmavenUser=$user"
   only:
     - master
 
