--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ def junit_version = '4.13.1'
 def grammarDir = 'src/main/grammars'
 
 group = "de.monticore.lang"
-version = '7.4.0-SNAPSHOT'
+version = '7.4.0'
 description = "Automata DSL"
 sourceCompatibility = "11"
 
