--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,9 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - name: MontiCore Getting Started - The Automaton Language
-  - init: gradle build # runs during prebuild
+  - init: |
+      yes | sdk install gradle 7.5.1 # use gradle 7.5.1
+      gradle build # build project during prebuild
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
