--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,8 @@
 tasks:
   - name: MontiCore Getting Started - The Automaton Language
   - init: |
-      yes | sdk install gradle 7.5.1 # use gradle 7.5.1
-      gradle build # build project during prebuild
+      yes | sdk install gradle 7.5.1
+      gradle build
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
