--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ repo=https://nexus.se.rwth-aachen.de/content/groups/public
 useLocalRepo=false
 
 # versions
-mc_version=7.6.0
-se_commons_version =7.6.0
+mc_version=7.7.0-SNAPSHOT
+se_commons_version =7.7.0-SNAPSHOT
