--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,8 @@ publishing {
 }
 
 tasks.withType(JavaCompile) {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
     options.encoding = 'UTF-8'
 }
 
