cleanup & upgrade gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,160 +1,121 @@
 /* (c) https://github.com/MontiCore/monticore */
 plugins {
-    id "java"
-    id "monticore" version "$mc_version" // MontiCore Plugin
-    id "maven-publish"
-    id "com.github.johnrengelman.shadow" version "6.0.0"
-    // useful reports
-    // todo: reactivate this plugin when new version compatible to gradle 6.0.1 is available
-//    id 'cz.malohlava.visteg' version '1.0.5'
-    id 'jacoco'
+  id "java-library" // Java while providing specific knowledge about Java libraries
+  id "de.monticore.generator" version "$mc_version" // MontiCore Plugin
+  id "maven-publish"
+  id "com.github.johnrengelman.shadow" version "6.0.0"
+  id 'jacoco' // Test coverage reports
+  id 'de.se_rwth.codestyle' version "$mc_version" // Enforces & Provides SE CodeStyle
 }
 
 
-def guava_version = '30.0-jre'
-def findbugs_version = '3.0.0'
-def antlr_version = '4.12.0'
+def guava_version = '33.1.0-jre'
 def junit_version = '4.13.1'
-
-def grammarDir = 'src/main/grammars'
 
 group = "de.monticore.lang"
 description = "Automata DSL"
-sourceCompatibility = "11"
 
+// Change the output directory
 buildDir = file("$projectDir/target")
 
-// configure non-standard source sets
-sourceSets {
-    main.java.srcDirs += ["$projectDir/target/generated-sources/monticore/sourcecode"]
-    grammars {
-        resources {
-            srcDirs([grammarDir])
-            include "**/*.mc4"
-        }
-    }
+generateMCGrammars {
+  // The mc4 grammars are build from the src/main/grammars directory by default
+  // You do not have to configure anything, the de.monticore.generator plugin does it all
+  // Reasonable defaults are used, further details: https://monticore.github.io/monticore/docs/Gradle/
 }
 
+
 java {
-    registerFeature('grammars') {
-        usingSourceSet(sourceSets.grammars)
-    }
+  // Configure the java toolchain to use Java 11
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(11)
+  }
 }
+
 
 dependencies {
-    implementation "de.monticore:monticore-runtime:$mc_version"
-    implementation "de.monticore:monticore-grammar:$mc_version"
-    grammar("de.monticore:monticore-grammar:$mc_version") {
-        capabilities {
-            requireCapability("de.monticore:monticore-grammar-grammars")
-        }
+  // Depend on the MontiCore language library (which in term depends on the runtime)
+  grammar "de.monticore:monticore-grammar:$mc_version"
+  // Next, dependencies of the project itself
+  implementation group: 'com.google.guava', name: 'guava', version: guava_version
+  implementation group: 'de.monticore.lang', name: 'cd4analysis', version: mc_version
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+  // And dependencies for the test source set
+  testImplementation group: 'junit', name: 'junit', version: junit_version
+  // Provide MontiCore-specific tests, such as de.monticore.cocos.helper.Assert
+  testImplementation("de.monticore:monticore-runtime:$mc_version") {
+    capabilities {
+      requireCapability("de.monticore:monticore-runtime-tests")
     }
-    implementation "de.se_rwth.commons:se-commons-logging:$se_commons_version"
-    implementation "de.se_rwth.commons:se-commons-utilities:$se_commons_version"
-    implementation group: 'com.google.guava', name: 'guava', version: guava_version
-    implementation group: 'de.monticore.lang', name: 'cd4analysis', version: mc_version
-    implementation group: 'org.antlr', name: 'antlr4-runtime', version: antlr_version
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
-    testImplementation "de.monticore:monticore-runtime:$mc_version"
-    testImplementation group: 'junit', name: 'junit', version: junit_version
-    testImplementation("de.monticore:monticore-runtime:$mc_version") {
-        capabilities {
-            requireCapability("de.monticore:monticore-runtime-tests")
-        }
-    }
+  }
 }
 
-// has to be placed directly under the dependency definition, since otherwise the grammar configurations are not found
+// Where can we find the dependencies?
 repositories {
-    if (("true").equals(getProperty('useLocalRepo'))) {
-        mavenLocal()
-    }
-    maven {
-        credentials.username mavenUser
-        credentials.password mavenPassword
-        url repo
-    }
-}
-
-
-// one task per file
-//fileTree(grammarDir).each {
-//    def g = it
-//    task  "generate${it.getName().substring(0,it.getName().lastIndexOf('.'))}" (type: MCTask) {
-//        grammar = file g
-//        outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
-//        handcodedPath file("$projectDir/src/main/java")
-//        modelPath file("$grammarDir")
-//        def incCheckDir = file(grammarDir).toURI().relativize(g.toURI()).toString()
-//        incCheckDir = incCheckDir.substring(0,incCheckDir.lastIndexOf('.')).toLowerCase()
-//        def uptoDate = incCheck(outputDir.toString() +"/$incCheckDir/IncGenGradleCheck.txt")
-//        outputs.upToDateWhen { uptoDate }
-//    }
-//}
-
-task generateAutomata(type: MCTask) {
-    grammar = file "$grammarDir/Automata.mc4"
-    outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
-    def uptoDate = incCheck("Automata.mc4")
-    outputs.upToDateWhen { uptoDate }
-}
-
-compileJava {
-    dependsOn project.collect { it.tasks.withType(MCTask) }
+  if (("true").equals(getProperty('useLocalRepo'))) {
+    mavenLocal()
+  }
+  maven {
+    credentials.username mavenUser
+    credentials.password mavenPassword
+    url repo
+  }
 }
 
 java {
-    withSourcesJar()
-    withJavadocJar()
+  withSourcesJar() // Also publish a variant consisting of the Java sources
+  withJavadocJar() // Also publish a variant consisting of the JavaDocs
 }
 
-sourcesJar.dependsOn project.collect { it.tasks.withType(MCTask) }
+sourcesJar.dependsOn project.collect { it.tasks.withType(MCGenTask) }
 
 // generated java doc contains errors, disable for now
 javadoc.failOnError(false)
 
 shadowJar { // all in one jar
-    manifest {
-        attributes "Main-Class": "automata.AutomataTool"
-    }
-    archiveClassifier = "tool"
+  manifest {
+    attributes "Main-Class": "automata.AutomataTool"
+  }
+  archiveClassifier = "tool"
 }
 
 jar.dependsOn(shadowJar)
 
 // configure deployment
 publishing {
-    // configure what artifacts to publish
-    publications {
-        mavenJava(MavenPublication) {
-            artifactId = "$project.name"
-            from components.java
-        }
+  // configure what artifacts to publish
+  publications {
+    mavenJava(MavenPublication) {
+      artifactId = "$project.name"
+      from components.java
     }
-    repositories.maven {
-        credentials.username mavenUser
-        credentials.password mavenPassword
-        def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
-        def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
-        url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
-    }
+  }
+  repositories.maven {
+    credentials.username mavenUser
+    credentials.password mavenPassword
+    def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
+    def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
+    url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
+  }
 }
 
 tasks.withType(JavaCompile) {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
-    options.encoding = 'UTF-8'
+  options.encoding = 'UTF-8'
 }
 
 task testReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/allTests")
-    // Include the results from the 'test' task
-    reportOn tasks.withType(Test)
+  destinationDir = file("$buildDir/reports/allTests")
+  // Include the results from the 'test' task
+  reportOn tasks.withType(Test)
 }
 
 
 task buildAll(type: GradleBuild) {
-    tasks = ['build']
+  tasks = ['build']
+}
+
+spotless {
+  enforceCheck = false
 }
 
 defaultTasks 'build'
