--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ repo=https://nexus.se.rwth-aachen.de/content/groups/public
 useLocalRepo=false
 
 # versions
-version=7.7.0-SNAPSHOT
-mc_version=7.7.0-SNAPSHOT
-se_commons_version =7.7.0-SNAPSHOT
+version=7.7.0
+mc_version=7.7.0
+se_commons_version =7.7.0
